added kaleido lib and now in profile page the graphs are images and not html with js from plotly.\nadded the images stored in the static folder as png.

--- a/main/templates/code/base.html
+++ b/main/templates/code/base.html
@@ -37,6 +37,11 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/profile"
+                >profile</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item dropdown">
@@ -51,9 +56,13 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="/teams">Personal task</a>
+                  <a class="dropdown-item" href="/personal_tasks"
+                    >Personal task</a
+                  >
                 </li>
-                <li><a class="dropdown-item" href="#">Daily task</a></li>
+                <li>
+                  <a class="dropdown-item" href="/daily_tasks">Daily task</a>
+                </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="#">Something else here</a>
