--- a/main/templates/code/dashboard.html
+++ b/main/templates/code/dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'code/base.html'%} {% block content %}
 
 <div class="card-group gap-3" style="margin: 4rem 4rem 0rem">
-  <div class="card">
+  <div class="card border-0">
     <div class="graph-img" style="width: 24rem; height: 20rem">
       {{ graph_chart|safe }}
     </div>
@@ -16,7 +16,7 @@
       </p>
     </div>
   </div>
-  <div class="card">
+  <div class="card border-0">
     <div class="graph-img" style="width: 24rem; height: 20rem">
       {{ pie_chart|safe }}
     </div>
@@ -31,7 +31,7 @@
       </p>
     </div>
   </div>
-  <div class="card">
+  <div class="card border-0">
     <div class="graph-img" style="width: 20-rem; height: 20rem">
       {{ line_chart|safe }}
     </div>
@@ -48,7 +48,7 @@
     </div>
   </div>
 </div>
-<div class="card">
+<div class="card border-0">
   <div class="last_chart" style="height: 450px; margin: 4rem 4rem 0rem">
     {{line_2_chart|safe}}
   </div>
@@ -66,7 +66,7 @@
   </div>
   {% endblock content %}
 
-  <div class="last_chart" style="height: 450px; margin: 4rem 4rem 0rem">
+  <div class="last_chart " style="height: 450px; margin: 4rem 4rem 0rem">
     {{line_2_chart|safe}}
   </div>
 </div>
