--- a/main/templates/code/teams.html
+++ b/main/templates/code/teams.html
@@ -1,4 +1,4 @@
-{% extends 'code/base.html' %} {% block content %}
+{% extends 'code/base.html' %} {% block content %}{% load static %}
 <div style="margin: 4rem 8rem 4rem">
   <table class="table table-md" bs-data="light">
     <thead class="table-light">
@@ -30,4 +30,5 @@
     </tbody>
   </table>
 </div>
+
 {% endblock content %}
