monthly graph added

--- a/main/templates/code/profile.html
+++ b/main/templates/code/profile.html
@@ -41,14 +41,14 @@
             </div>
           </div>
         <div class="col border border-info border-1">
-          {% comment %} <div class="ms-1" style="width:250px;height:370px"> {% endcomment %}
+         <div class="ms-1" style="width:300px;height:370px"> 
           <h3>revenue</h3>
           <img src="{% static 'dashboard/images/test.png'%}"style='width:100%'/>
           </div>
-        {% comment %} </div> {% endcomment %}
+        </div> 
 
           <div class="col border border-info border-1">
-            <div  style="width:250px;height:370px">
+            <div  style="width:300px;height:370px">
               <h3>contribution</h3>
           <img src="{% static 'dashboard/images/donut.png'%}"style='width:100%'/>
 
