--- a/main/employer_profile/templates/code/profile.html
+++ b/main/employer_profile/templates/code/profile.html
@@ -1,31 +1,17 @@
 {% extends 'code/base.html' %}{% block content %} {% load static %}
-{% comment %} <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">revenue</h5>
-                <div style='width:250px;height:250px'>
-              {{ revenue_pie_chart|safe }}
-              </div>
-                <p class="card-text">
-                  This is a longer card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-              </div>
-            </div> {% endcomment %}
-<!-- the content of the self view -->
-<div class="container text-left" style='margin-top:8rem'>
+<div class="container text-left" style="margin-top: 8rem">
   <div class="row row-cols-1 row-cols-md-4 g-1">
-    <div class="col border border-light border-1 ">
+    <div class="col border border-light border-1">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">James Jameson</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">Sales Team</h6>
+          <h6 class="card-subtitle mb-2 text-body-secondary">Sales Team</h6>
 
-        <img
-          src="{% static 'dashboard/images/profile_example.jpeg'%}"
-          class="card-img-top"
-          alt="..."
-        />
+          <img
+            src="{% static 'employer/images/photo.png'%}"
+            class="card-img-top"
+            alt="..."
+          />
           <p class="card-text">100 leads - this month.</p>
           <p class="card-text">100,000 revenue - this month.</p>
         </div>
@@ -35,22 +21,24 @@
               <div class="col-sm-auto" style="margin-top: 15px">
                 <a href="#" class="btn btn-success">EDIT</a>
               </div>
-              </div>
-              </div>
-              </div>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+
+
         <div class="col border border-info border-1">
          <div class="ms-1" style="width:300px;height:370px"> 
-          <h3>revenue</h3>
-          <img src="{% static 'dashboard/images/test.png'%}"style='width:100%'/>
+          <h3>monthly lead profit</h3>
+          <img src="{% static 'employer/images/pie.png'%}"style='width:100%'/>
           </div>
         </div> 
 
           <div class="col border border-info border-1">
             <div  style="width:300px;height:370px">
-              <h3>contribution</h3>
-          <img src="{% static 'dashboard/images/donut.png'%}"style='width:100%'/>
+              <h3>weakly lead profit</h3>
+          <img src="{% static 'employer/images/donut.png'%}"style='width:100%'/>
 
             </div>
           </div>
