--- a/main/employer_profile/templates/code/profile.html
+++ b/main/employer_profile/templates/code/profile.html
@@ -2,7 +2,7 @@
 <div class="container text-left" style="margin-top: 8rem">
   <div class="row row-cols-1 row-cols-md-4 g-1">
     <div class="col border border-light border-1">
-      <div class="card">
+      <!-- <div class="card">
         <div class="card-body">
           <h5 class="card-title">James Jameson</h5>
           <h6 class="card-subtitle mb-2 text-body-secondary">Sales Team</h6>
@@ -23,25 +23,28 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
+        </div> -->
+        {{ profile|safe }}
+      </div> 
     </div>
 
 
-        <div class="col border border-info border-1">
+        <!-- <div class="col border border-info border-1">
          <div class="ms-1" style="width:300px;height:370px"> 
           <h3>monthly lead profit</h3>
           <img src={% static 'employer/images/pie.png' %} style='width:100%'/>
           </div>
-        </div> 
+        </div>  -->
+        {{ monthly_graph|safe }}
 
-          <div class="col border border-info border-1">
+          <!-- <div class="col border border-info border-1">
             <div  style="width:300px;height:370px">
               <h3>weakly lead profit</h3>
           <img src="{% static 'employer/images/donut.png'%}"style='width:100%'/>
 
             </div>
-          </div>
+          </div> -->
+          {{ weekly_graph|safe }}
 
             <!-- tasks window -->
             <div class="col">
