added logic to dashboard model file that will handle db queries for graph information in the future

--- a/main/templates/code/daily_tasks.html
+++ b/main/templates/code/daily_tasks.html
@@ -32,7 +32,7 @@
             <div class="card-footer text-body-secondary">
             <div class="container">
                 <div class="row">
-                <div class="col-sm-auto" style="">2 days ago</div>
+                <div class="col-sm-auto" >2 days ago</div>
                     <div class="col-sm-auto" style="margin-top: 15px">
                         <a href="#" class="btn btn-primary">done</a>
                         <a href="#" class="btn btn-danger">undone</a>
@@ -65,7 +65,7 @@
         <div class="card-footer text-body-secondary">
           <div class="container">
             <div class="row">
-              <div class="col-sm-auto" style="">2 days ago</div>
+              <div class="col-sm-auto">2 days ago</div>
 
               <div class="col-sm-auto" style="margin-top: 15px">
                 <a href="#" class="btn btn-primary">done</a>
