--- a/main/templates/code/base.html
+++ b/main/templates/code/base.html
@@ -13,26 +13,25 @@
   <body>
     <!-- main menu html code -->
     <nav
-    class="navbar sticky-top navbar-expand-lg bg-body-tertiary"
-    data-bs-theme="light"
+      class="navbar sticky-top navbar-expand-lg bg-body-tertiary"
+      data-bs-theme="light"
     >
-    <div class="container-md">
-      <a class="navbar-brand" href="/dashboard">Dashboard</a>
-      <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-      >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <div class="container-md">
+        <a class="navbar-brand" href="/dashboard">Dashboard</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             {% if user.is_authenticated %}
-
 
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/teams"
@@ -59,9 +58,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="/personal_tasks"
-                    >Personal task</a
-                  >
+                  <a class="dropdown-item" href="/tasks">tasks</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="/daily_tasks">Daily task</a>
@@ -72,21 +69,20 @@
                 </li>
               </ul>
             </li>
-            
+
             <li class="nav-item">
               <a class="nav-link Enabled" href="/logout" aria-disabled="False"
                 >Logout</a
               >
             </li>
             {% else %}
-            
+
             <li class="nav-item">
               <a class="nav-link Enabled" href="/login" aria-disabled="False"
-              >Login</a
+                >Login</a
               >
             </li>
             {% endif %}
-
           </ul>
         </div>
       </div>
