--- a/main/tasks/templates/code/tasks.html
+++ b/main/tasks/templates/code/tasks.html
@@ -1,86 +1,283 @@
 {% extends 'code/base.html' %} {% block content %}
 <!-- the html++ bootstrap code here -->
-<div class="container text-center"style='width:30rem;padding:4rem'>
+<!-- this is the DEPARTMENT TASKS TITLE -->
+<div class='container'style='margin-top:4rem ;'>
 
-      <div class="card">
+<figure class="text-center" style="padding-bottom: 0.5rem;">
+  <blockquote class="blockquote">
+    <h1>Department Tasks</h1>
+  </blockquote>
+</figure>
 
-        <div class="card-header">Featured</div>
+<!-- this is the progress bar -->
+<div class='row'>
+  <div class='col-sm-auto'>
+    <p >Daily Tasks Completion</p>
+  </div><!-- col end div-->
 
-        <div class="card-body">
+  <div class="col">
+  <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar" style="width: 15%">15%</div>
+  </div>
+  </div>
+  </div>
 
+
+  <!-- this is the tasks card section -->
+  <div class="container">
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+      <div class="col">
+        <div class="card m-1">
+          <div class="card-header">Featured</div>
+          <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit longer.
-            </p>
-            <div
-                class="progress"
-                role="progressbar"
-                aria-label="Basic example"
-                aria-valuenow="0"
-                aria-valuemin="0"
-                aria-valuemax="100"
-            >
-
-                <div class="progress-bar" style="width: 25%"></div>
-
-            </div><!-- progress bar div-->
-
-        </div><!-- card body div-->
-
-            <!-- FOOTER DIV-->
-            <div class="card-footer text-body-secondary">
-            <div class="container">
-                <div class="row">
-                <div class="col-sm-auto" >2 days ago</div>
-                    <div class="col-sm-auto" style="margin-top: 15px">
-                        <a href="#" class="btn btn-primary">done</a>
-                        <a href="#" class="btn btn-danger">undone</a>
-                    </div>
-                </div>
-                </div><!-- row end div-->
-                </div><!-- container row div-->
-            </div><!--card footer div-->
-            <!-- FOOTER DIV-->
-
-        </div><!-- card div-->
-</div><!--container div-->
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          
+          </div>
+          <div class="card-footer text-body-secondary">
+            <div class="col-sm-auto" style="margin-top: 15px">
+              <small class="text-body-secondary m-1" >Last updated 3 mins ago</small>
+              <div class="col-sm-auto" style="margin-top: 15px">
+    
+              <a href="#" class="btn btn-primary">done</a>
+              <a href="#" class="btn btn-danger">undone</a>
+              </div>
+          </div>
+          </div>
+          
+        </div>
+      </div>
+      <div class="col">
+        <div class="card m-1">
+          <div class="card-header">Featured</div>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          
+          </div>
+          <div class="card-footer text-body-secondary">
+            <div class="col-sm-auto" style="margin-top: 15px">
+              <small class="text-body-secondary m-1" >Last updated 3 mins ago</small>
+              <div class="col-sm-auto" style="margin-top: 15px">
+    
+              <a href="#" class="btn btn-primary">done</a>
+              <a href="#" class="btn btn-danger">undone</a>
+              </div>
+          </div>
+          </div>
+          
+        </div>
+      </div>
+      <div class="col">
+        <div class="card m-1">
+          <div class="card-header">Featured</div>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          
+          </div>
+          <div class="card-footer text-body-secondary">
+            <div class="col-sm-auto" style="margin-top: 15px">
+              <small class="text-body-secondary m-1" >Last updated 3 mins ago</small>
+              <div class="col-sm-auto" style="margin-top: 15px">
+    
+              <a href="#" class="btn btn-primary">done</a>
+              <a href="#" class="btn btn-danger">undone</a>
+              </div>
+          </div>
+          </div>
+          
+        </div>
+      </div>
+      <div class="col">
+        <div class="card m-1">
+          <div class="card-header">Featured</div>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          
+          </div>
+          <div class="card-footer text-body-secondary">
+            <div class="col-sm-auto" style="margin-top: 15px">
+              <small class="text-body-secondary m-1" >Last updated 3 mins ago</small>
+              <div class="col-sm-auto" style="margin-top: 15px">
+    
+              <a href="#" class="btn btn-primary">done</a>
+              <a href="#" class="btn btn-danger">undone</a>
+              </div>
+          </div>
+          </div>
+          
+        </div>
+      </div>
+      <div class="col">
+        <div class="card m-1">
+          <div class="card-header">Featured</div>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          
+          </div>
+          <div class="card-footer text-body-secondary">
+            <div class="col-sm-auto" style="margin-top: 15px">
+              <small class="text-body-secondary m-1" >Last updated 3 mins ago</small>
+              <div class="col-sm-auto" style="margin-top: 15px">
+    
+              <a href="#" class="btn btn-primary">done</a>
+              <a href="#" class="btn btn-danger">undone</a>
+              </div>
+          </div>
+          </div>
+          
+        </div>
+      </div>
+      
+    
+    
+    </div>
+      </div>
+    
+    </div><!--container div-->
 
 
 
 <!-- the card group html-->
 
-<div style="margin: 25px 8rem 75px">
-  <div class="row row-cols-1 row-cols-md-4 g-5">
-      <div class="col">
-      <div class="card">
-        <div class="card-header">Featured</div>
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            This is a longer card with supporting text below as a natural
-            lead-in to additional content. This content is a little bit longer.
-          </p>
-        </div>
-        <div class="card-footer text-body-secondary">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-auto">2 days ago</div>
+<!-- the TASKS title -->
+<div class='container'style='margin-top:4rem ;'>
+<figure class="text-center">
+  <blockquote class="blockquote">
+    <h1>Tasks</h1>
+  </blockquote>
+</figure>
+<!-- this is the progress bar -->
+<div class='row'>
+  <div class='col-sm-auto'>
+    <p >Daily Tasks Completion</p>
+  </div><!-- col end div-->
 
-              <div class="col-sm-auto" style="margin-top: 15px">
-                <a href="#" class="btn btn-primary">done</a>
-                <a href="#" class="btn btn-danger">undone</a>
-              </div>
+  <div class="col">
+  <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+<div class="progress-bar" style="width: 15%">15%</div>
+</div>
+</div>
+</div>
 
-            </div><!-- row end div-->
 
-          </div><!-- footer container end div-->
+<!-- the cards TASKS -->
+<div class="container">
+<div class="row row-cols-1 row-cols-md-4 g-4">
+  <div class="col">
+    <div class="card m-1">
+      <div class="card-header">Featured</div>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+      
+      </div>
+      <div class="card-footer text-body-secondary">
+        <div class="col-sm-auto" style="margin-top: 15px">
+          <small class="text-body-secondary m-1" >Last updated 3 mins ago</small>
+          <div class="col-sm-auto" style="margin-top: 15px">
 
-        </div><!-- card div-->
-      </div><!-- column div-->
-    </div><!-- END DIV-->
+          <a href="#" class="btn btn-primary">done</a>
+          <a href="#" class="btn btn-danger">undone</a>
+          </div>
+      </div>
+      </div>
+      
+    </div>
+  </div>
+  <div class="col">
+    <div class="card m-1">
+      <div class="card-header">Featured</div>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+      
+      </div>
+      <div class="card-footer text-body-secondary">
+        <div class="col-sm-auto" style="margin-top: 15px">
+          <small class="text-body-secondary m-1" >Last updated 3 mins ago</small>
+          <div class="col-sm-auto" style="margin-top: 15px">
 
-    </div><!-- row end div-->
-  </div><!-- padding div end div-->
+          <a href="#" class="btn btn-primary">done</a>
+          <a href="#" class="btn btn-danger">undone</a>
+          </div>
+      </div>
+      </div>
+      
+    </div>
+  </div>
+  <div class="col">
+    <div class="card m-1">
+      <div class="card-header">Featured</div>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+      
+      </div>
+      <div class="card-footer text-body-secondary">
+        <div class="col-sm-auto" style="margin-top: 15px">
+          <small class="text-body-secondary m-1" >Last updated 3 mins ago</small>
+          <div class="col-sm-auto" style="margin-top: 15px">
 
+          <a href="#" class="btn btn-primary">done</a>
+          <a href="#" class="btn btn-danger">undone</a>
+          </div>
+      </div>
+      </div>
+      
+    </div>
+  </div>
+  <div class="col">
+    <div class="card m-1">
+      <div class="card-header">Featured</div>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+      
+      </div>
+      <div class="card-footer text-body-secondary">
+        <div class="col-sm-auto" style="margin-top: 15px">
+          <small class="text-body-secondary m-1" >Last updated 3 mins ago</small>
+          <div class="col-sm-auto" style="margin-top: 15px">
+
+          <a href="#" class="btn btn-primary">done</a>
+          <a href="#" class="btn btn-danger">undone</a>
+          </div>
+      </div>
+      </div>
+      
+    </div>
+  </div>
+  <div class="col">
+    <div class="card m-1">
+      <div class="card-header">Featured</div>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+      
+      </div>
+      <div class="card-footer text-body-secondary">
+        <div class="col-sm-auto" style="margin-top: 15px">
+          <small class="text-body-secondary m-1" >Last updated 3 mins ago</small>
+          <div class="col-sm-auto" style="margin-top: 15px">
+
+          <a href="#" class="btn btn-primary">done</a>
+          <a href="#" class="btn btn-danger">undone</a>
+          </div>
+      </div>
+      </div>
+      
+    </div>
+  </div>
+
+
+
+</div>
+  </div>
+
+</div>
+</div>
 {% endblock content%}
