added default user picture to profile page and visuals to the profile page

--- a/main/tasks/templates/code/tasks.html
+++ b/main/tasks/templates/code/tasks.html
@@ -272,12 +272,44 @@
       
     </div>
   </div>
-
-
-
 </div>
   </div>
+</div>
+</div>
 
-</div>
-</div>
+<!-- the title of the tasks -->
+<div class='container'style='margin-top:4rem ;'>
+<figure class="text-center">
+  <blockquote class="blockquote">
+    <h1>Leads</h1>
+  </blockquote>
+</figure>
+
+<!-- the another task section-->
+ <!-- the container end div-->
+ <div class="container">
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+      <div class="col">
+        <div class="card m-1">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          
+          </div>
+          <div class="card-footer text-body-secondary">
+            <div class="col-sm-auto" style="margin-top: 15px">
+              <small class="text-body-secondary m-1" >Last updated 3 mins ago</small>
+              <div class="col-sm-auto" style="margin-top: 15px">
+    
+              <a href="#" class="btn btn-primary">done</a>
+              <a href="#" class="btn btn-secondary">Edit</a>
+              </div>
+          </div>
+          </div>
+          
+        </div>
+      </div>
+
+      </div>
+      </div>
 {% endblock content%}
