--- a/main/employer_profile/templates/code/profile.html
+++ b/main/employer_profile/templates/code/profile.html
@@ -1,95 +1,79 @@
 {% extends 'code/base.html' %}{% block content %} {% load static %}
 <div class="container text-left" style="margin-top: 8rem">
+<!-- info section -->
+<!-- info title-->
+<figure class="text-left">
+  <blockquote class="blockquote">
+    <h1>Info</h1>
+  </blockquote>
+</figure>
+
+<!-- info cards-->
   <div class="row row-cols-1 row-cols-md-4 g-1">
     <div class="col border border-light border-1">
-      <!-- <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">James Jameson</h5>
-          <h6 class="card-subtitle mb-2 text-body-secondary">Sales Team</h6>
-
-          <img
-            src="{% static 'employer/images/photo.png'%}"
-            class="card-img-top"
-            alt="..."
-          />
-          <p class="card-text">100 leads - this month.</p>
-          <p class="card-text">100,000 revenue - this month.</p>
-        </div>
-        <div class="card-footer text-body-secondary">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-auto" style="margin-top: 15px">
-                <a href="#" class="btn btn-success">EDIT</a>
-              </div>
-            </div>
-          </div>
-        </div> -->
+      
         {{ profile|safe }}
+
       </div> 
     </div>
-
-
-        <!-- <div class="col border border-info border-1">
-         <div class="ms-1" style="width:300px;height:370px"> 
-          <h3>monthly lead profit</h3>
-          <img src={% static 'employer/images/pie.png' %} style='width:100%'/>
-          </div>
-        </div>  -->
         {{ monthly_graph|safe }}
 
-          <!-- <div class="col border border-info border-1">
-            <div  style="width:300px;height:370px">
-              <h3>weakly lead profit</h3>
-          <img src="{% static 'employer/images/donut.png'%}"style='width:100%'/>
+        {{ weekly_graph|safe }}
 
-            </div>
-          </div> -->
-          {{ weekly_graph|safe }}
-
-            <!-- tasks window -->
-            <div class="col">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">contribution</h5>
-                <p class="card-text">
-                  This is a longer card with supporting text below as a natural
-                  lead-in to additional content.
-                </p>
-              </div>
-            </div>
-
-            <!-- another tasks window-->
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">contribution</h5>
-                <p class="card-text">
-                  This is a longer card with supporting text below as a natural
-                  lead-in to additional content.
-                </p>
-              </div>
-            </div>
-          </div>
-
-      <!-- the container end div-->
     </div>
   </div>
+ </div>
 </div>
+
+<!-- Lead information -->
+
+<!-- the title of the leads-->
+<div class='container'style='margin-top:4rem ;'>
+<figure class="text-left">
+  <blockquote class="blockquote">
+    <h1>Today Leads</h1>
+  </blockquote>
+</figure>
+<!-- tasks window -->
+<div class="col">
+<div class="card m-1" style='width:350px'>
+      <div class="card-header">Featured</div>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+      
+      </div>
+      <div class="card-footer text-body-secondary">
+        <div class="col-sm-auto" style="margin-top: 15px">
+          <small class="text-body-secondary m-1" >Last updated 3 mins ago</small>
+          <div class="col-sm-auto" style="margin-top: 15px">
+
+          <a href="#" class="btn btn-primary">done</a>
+          <a href="#" class="btn btn-danger">undone</a>
+          </div>
+      </div>
+      </div>
 </div>
+
+
+</div>
+
+      <!-- the container end div-->
 
 <div class='container'style='margin-top:4rem'>
-<h3>Weekly Task Completion</h3>
+  <h3>Weekly Task Completion</h3>
 <div class='row'style='margin-bottom:15px'>
 
-    <div class='col-sm-auto'>
-      <p> 01/10/23</p>
-    </div><!-- col end div-->
+<div class='col-sm-auto'>
+  <p> 01/10/23</p>
+</div><!-- col end div-->
 
-    <div class='col'>
-    <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+<div class='col'>
+  <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
     <div class="progress-bar" style="width: 0%">0%</div>
-    </div>
-    </div>
-    <div class='row'style='margin-bottom:15px'>
+  </div>
+  </div>
+  <div class='row'style='margin-bottom:15px'>
 
     <div class='col-sm-auto'>
       <p>   08/10/23</p>
