no minor changes

--- a/main/employer_profile/templates/code/profile.html
+++ b/main/employer_profile/templates/code/profile.html
@@ -31,7 +31,7 @@
 <div class='container'style='margin-top:4rem ;'>
 <figure class="text-left">
   <blockquote class="blockquote">
-    <h1>Today Leads</h1>
+    <h1>Today Leads Info</h1>
   </blockquote>
 </figure>
 <!-- tasks window -->
@@ -48,18 +48,19 @@
           <small class="text-body-secondary m-1" >Last updated 3 mins ago</small>
           <div class="col-sm-auto" style="margin-top: 15px">
 
-          <a href="#" class="btn btn-primary">done</a>
-          <a href="#" class="btn btn-danger">undone</a>
+          <a href="tasks" class="btn btn-secondary">VIEW</a>
+
           </div>
       </div>
       </div>
 </div>
 
 
+      <!-- the container end div-->
 </div>
 
-      <!-- the container end div-->
 
+      <!--weekly task completion section -->
 <div class='container'style='margin-top:4rem'>
   <h3>Weekly Task Completion</h3>
 <div class='row'style='margin-bottom:15px'>
