--- a/main/templates/code/dashboard.html
+++ b/main/templates/code/dashboard.html
@@ -1,72 +1,94 @@
 {% extends 'code/base.html'%} {% block content %}
+<!-- the dashboard title-->
+<div class="container" style="margin-top: 4rem">
+  <figure>
+  <blockquote class="blockquote">
+    <h2>company income</h2>
+  </blockquote>
+  <figcaption class="blockquote-footer">
+    Calculated by sales leads.
+  </figcaption>
+</figure>
 
-<div class="card-group gap-3" style="margin: 4rem 4rem 0rem">
-  <div class="card border-0">
-    <div class="graph-img" style="width: 24rem; height: 20rem">
-      {{ graph_chart|safe }}
+  <!-- dashboard graphs-->
+  <div class="card-group gap-3" style="margin: 4rem 4rem 0rem">
+    <div class="card border-0">
+      <div class="graph-img" style="width: 24rem; height: 20rem">
+        {{ graph_chart|safe }}
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">
+          This is a wider card with supporting text below as a natural lead-in
+          to additional content. This content is a little bit longer.
+        </p>
+        <p class="card-text">
+          <small class="text-body-secondary">Last updated 3 mins ago</small>
+        </p>
+      </div>
     </div>
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">
-        This is a wider card with supporting text below as a natural lead-in to
-        additional content. This content is a little bit longer.
-      </p>
-      <p class="card-text">
-        <small class="text-body-secondary">Last updated 3 mins ago</small>
-      </p>
+    <div class="card border-0">
+      <div class="graph-img" style="width: 24rem; height: 20rem">
+        {{ pie_chart|safe }}
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">
+          This card has supporting text below as a natural lead-in to additional
+          content.
+        </p>
+        <p class="card-text">
+          <small class="text-body-secondary">Last updated 3 mins ago</small>
+        </p>
+      </div>
+    </div>
+    <div class="card border-0">
+      <div class="graph-img" style="width: 20-rem; height: 20rem">
+        {{ line_chart|safe }}
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">
+          This is a wider card with supporting text below as a natural lead-in
+          to additional content. This card has even longer content than the
+          first to show that equal height action.
+        </p>
+        <p class="card-text">
+          <small class="text-body-secondary">Last updated 3 mins ago</small>
+        </p>
+      </div>
     </div>
   </div>
-  <div class="card border-0">
-    <div class="graph-img" style="width: 24rem; height: 20rem">
-      {{ pie_chart|safe }}
+  <!-- last line chart graph title-->
+ <figure>
+  <blockquote class="blockquote ">
+    <h3>Stock Value</h3>
+  </blockquote>
+  <figcaption class="blockquote-footer">
+    computed the company's price-to-earnings (P/E) ratio.
+  </figcaption>
+</figure>
+    <!-- last line chart graph-->
+    <div class="card border-0">
+      <div class="last_chart" style="height: 450px; margin: 4rem 4rem 0rem">
+        {{line_2_chart|safe}}
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">
+          This is a wider card with supporting text below as a natural lead-in
+          to additional content. This card has even longer content than the
+          first to show that equal height action.
+        </p>
+        <p class="card-text">
+          <small class="text-body-secondary">Last updated 3 mins ago</small>
+        </p>
+      </div>
     </div>
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">
-        This card has supporting text below as a natural lead-in to additional
-        content.
-      </p>
-      <p class="card-text">
-        <small class="text-body-secondary">Last updated 3 mins ago</small>
-      </p>
-    </div>
-  </div>
-  <div class="card border-0">
-    <div class="graph-img" style="width: 20-rem; height: 20rem">
-      {{ line_chart|safe }}
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">
-        This is a wider card with supporting text below as a natural lead-in to
-        additional content. This card has even longer content than the first to
-        show that equal height action.
-      </p>
-      <p class="card-text">
-        <small class="text-body-secondary">Last updated 3 mins ago</small>
-      </p>
-    </div>
-  </div>
-</div>
-<div class="card border-0">
-  <div class="last_chart" style="height: 450px; margin: 4rem 4rem 0rem">
-    {{line_2_chart|safe}}
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">
-      This is a wider card with supporting text below as a natural lead-in to
-      additional content. This card has even longer content than the first to
-      show that equal height action.
-    </p>
-    <p class="card-text">
-      <small class="text-body-secondary">Last updated 3 mins ago</small>
-    </p>
-  </div>
-  </div>
-  {% endblock content %}
+    {% endblock content %}
 
-  <div class="last_chart " style="height: 450px; margin: 4rem 4rem 0rem">
-    {{line_2_chart|safe}}
+    <div class="last_chart" style="height: 450px; margin: 4rem 4rem 0rem">
+      {{line_2_chart|safe}}
+    </div>
   </div>
 </div>
